# sunrisewinds

./: .gitignore  Dockerfile  README.md  sunrisewinds.service
backend/: Cargo.toml  config.example.toml
backend/src/: api.rs  config.rs  db.rs  main.rs  models.rs  noaa.rs  notifications.rs  polling.rs  state.rs  viewline.rs  ws.rs
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/components/: AuroraMap.vue  KpPanel.vue  SolarWindPanel.vue  StatusBar.vue  SwpcAlertsPanel.vue
frontend/src/stores/: aurora.ts
frontend/src/views/: DashboardView.vue
