[package]
name = "sunrisewinds"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Web framework
axum = { version = "0.8", features = ["json", "ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }

# Desktop notifications
notify-rust = "4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
toml = "0.8"

# Error handling
anyhow = "1"
